CodeFiles/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     S -> payload_only
Rule 2     S -> itr_only
Rule 3     S -> truncated_right
Rule 4     S -> truncated_left
Rule 5     S -> doubled_payload
Rule 6     S -> expected
Rule 7     S -> truncated_sp_IPP
Rule 8     S -> truncated_selfprime
Rule 9     S -> truncated_sp_PPI
Rule 10    S -> snapback
Rule 11    S -> extended
Rule 12    S -> expected_selfprime
Rule 13    S -> truncated_snapback_selfprime
Rule 14    S -> snapback_selfprime
Rule 15    S -> other
Rule 16    other -> error
Rule 17    other -> <empty>
Rule 18    payload_only -> P
Rule 19    itr_only -> I
Rule 20    doubled_payload -> P AND P
Rule 21    truncated_right -> I AND P
Rule 22    truncated_left -> P AND I
Rule 23    truncated_sp_PPI -> P AND P AND I
Rule 24    truncated_sp_IPP -> I AND P AND P
Rule 25    expected -> I AND truncated_left
Rule 26    truncated_selfprime -> truncated_left AND P
Rule 27    extended -> truncated_sp_PIPI
Rule 28    extended -> I AND truncated_selfprime
Rule 29    extended -> truncated_left AND truncated_selfprime
Rule 30    extended -> truncated_left AND extended
Rule 31    truncated_sp_PIPI -> truncated_left AND truncated_left
Rule 32    truncated_sp_PIPI -> truncated_sp_PIPI AND truncated_left
Rule 33    snapback -> I AND truncated_sp_PPI
Rule 34    expected_selfprime -> I AND truncated_sp_PIPI
Rule 35    truncated_snapback_selfprime -> truncated_sp_PPI AND truncated_sp_PPI
Rule 36    truncated_snapback_selfprime -> truncated_sp_PPI AND truncated_snapback_selfprime
Rule 37    snapback_selfprime -> I AND truncated_snapback_selfprime

Terminals, with rules where they appear

AND                  : 20 21 22 23 23 24 24 25 26 28 29 30 31 32 33 34 35 36 37
I                    : 19 21 22 23 24 25 28 33 34 37
P                    : 18 20 20 21 22 23 23 24 24 26
error                : 16

Nonterminals, with rules where they appear

S                    : 0
doubled_payload      : 5
expected             : 6
expected_selfprime   : 12
extended             : 11 30
itr_only             : 2
other                : 15
payload_only         : 1
snapback             : 10
snapback_selfprime   : 14
truncated_left       : 4 25 26 29 30 31 31 32
truncated_right      : 3
truncated_selfprime  : 8 28 29
truncated_snapback_selfprime : 13 36 37
truncated_sp_IPP     : 7
truncated_sp_PIPI    : 27 32 34
truncated_sp_PPI     : 9 33 35 35 36

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . payload_only
    (2) S -> . itr_only
    (3) S -> . truncated_right
    (4) S -> . truncated_left
    (5) S -> . doubled_payload
    (6) S -> . expected
    (7) S -> . truncated_sp_IPP
    (8) S -> . truncated_selfprime
    (9) S -> . truncated_sp_PPI
    (10) S -> . snapback
    (11) S -> . extended
    (12) S -> . expected_selfprime
    (13) S -> . truncated_snapback_selfprime
    (14) S -> . snapback_selfprime
    (15) S -> . other
    (18) payload_only -> . P
    (19) itr_only -> . I
    (21) truncated_right -> . I AND P
    (22) truncated_left -> . P AND I
    (20) doubled_payload -> . P AND P
    (25) expected -> . I AND truncated_left
    (24) truncated_sp_IPP -> . I AND P AND P
    (26) truncated_selfprime -> . truncated_left AND P
    (23) truncated_sp_PPI -> . P AND P AND I
    (33) snapback -> . I AND truncated_sp_PPI
    (27) extended -> . truncated_sp_PIPI
    (28) extended -> . I AND truncated_selfprime
    (29) extended -> . truncated_left AND truncated_selfprime
    (30) extended -> . truncated_left AND extended
    (34) expected_selfprime -> . I AND truncated_sp_PIPI
    (35) truncated_snapback_selfprime -> . truncated_sp_PPI AND truncated_sp_PPI
    (36) truncated_snapback_selfprime -> . truncated_sp_PPI AND truncated_snapback_selfprime
    (37) snapback_selfprime -> . I AND truncated_snapback_selfprime
    (16) other -> . error
    (17) other -> .
    (31) truncated_sp_PIPI -> . truncated_left AND truncated_left
    (32) truncated_sp_PIPI -> . truncated_sp_PIPI AND truncated_left

    P               shift and go to state 17
    I               shift and go to state 18
    error           shift and go to state 20
    $end            reduce using rule 17 (other -> .)

    S                              shift and go to state 1
    payload_only                   shift and go to state 2
    itr_only                       shift and go to state 3
    truncated_right                shift and go to state 4
    truncated_left                 shift and go to state 5
    doubled_payload                shift and go to state 6
    expected                       shift and go to state 7
    truncated_sp_IPP               shift and go to state 8
    truncated_selfprime            shift and go to state 9
    truncated_sp_PPI               shift and go to state 10
    snapback                       shift and go to state 11
    extended                       shift and go to state 12
    expected_selfprime             shift and go to state 13
    truncated_snapback_selfprime   shift and go to state 14
    snapback_selfprime             shift and go to state 15
    other                          shift and go to state 16
    truncated_sp_PIPI              shift and go to state 19

state 1

    (0) S' -> S .



state 2

    (1) S -> payload_only .

    $end            reduce using rule 1 (S -> payload_only .)


state 3

    (2) S -> itr_only .

    $end            reduce using rule 2 (S -> itr_only .)


state 4

    (3) S -> truncated_right .

    $end            reduce using rule 3 (S -> truncated_right .)


state 5

    (4) S -> truncated_left .
    (26) truncated_selfprime -> truncated_left . AND P
    (29) extended -> truncated_left . AND truncated_selfprime
    (30) extended -> truncated_left . AND extended
    (31) truncated_sp_PIPI -> truncated_left . AND truncated_left

    $end            reduce using rule 4 (S -> truncated_left .)
    AND             shift and go to state 21


state 6

    (5) S -> doubled_payload .

    $end            reduce using rule 5 (S -> doubled_payload .)


state 7

    (6) S -> expected .

    $end            reduce using rule 6 (S -> expected .)


state 8

    (7) S -> truncated_sp_IPP .

    $end            reduce using rule 7 (S -> truncated_sp_IPP .)


state 9

    (8) S -> truncated_selfprime .

    $end            reduce using rule 8 (S -> truncated_selfprime .)


state 10

    (9) S -> truncated_sp_PPI .
    (35) truncated_snapback_selfprime -> truncated_sp_PPI . AND truncated_sp_PPI
    (36) truncated_snapback_selfprime -> truncated_sp_PPI . AND truncated_snapback_selfprime

    $end            reduce using rule 9 (S -> truncated_sp_PPI .)
    AND             shift and go to state 22


state 11

    (10) S -> snapback .

    $end            reduce using rule 10 (S -> snapback .)


state 12

    (11) S -> extended .

    $end            reduce using rule 11 (S -> extended .)


state 13

    (12) S -> expected_selfprime .

    $end            reduce using rule 12 (S -> expected_selfprime .)


state 14

    (13) S -> truncated_snapback_selfprime .

    $end            reduce using rule 13 (S -> truncated_snapback_selfprime .)


state 15

    (14) S -> snapback_selfprime .

    $end            reduce using rule 14 (S -> snapback_selfprime .)


state 16

    (15) S -> other .

    $end            reduce using rule 15 (S -> other .)


state 17

    (18) payload_only -> P .
    (22) truncated_left -> P . AND I
    (20) doubled_payload -> P . AND P
    (23) truncated_sp_PPI -> P . AND P AND I

    $end            reduce using rule 18 (payload_only -> P .)
    AND             shift and go to state 23


state 18

    (19) itr_only -> I .
    (21) truncated_right -> I . AND P
    (25) expected -> I . AND truncated_left
    (24) truncated_sp_IPP -> I . AND P AND P
    (33) snapback -> I . AND truncated_sp_PPI
    (28) extended -> I . AND truncated_selfprime
    (34) expected_selfprime -> I . AND truncated_sp_PIPI
    (37) snapback_selfprime -> I . AND truncated_snapback_selfprime

    $end            reduce using rule 19 (itr_only -> I .)
    AND             shift and go to state 24


state 19

    (27) extended -> truncated_sp_PIPI .
    (32) truncated_sp_PIPI -> truncated_sp_PIPI . AND truncated_left

    $end            reduce using rule 27 (extended -> truncated_sp_PIPI .)
    AND             shift and go to state 25


state 20

    (16) other -> error .

    $end            reduce using rule 16 (other -> error .)


state 21

    (26) truncated_selfprime -> truncated_left AND . P
    (29) extended -> truncated_left AND . truncated_selfprime
    (30) extended -> truncated_left AND . extended
    (31) truncated_sp_PIPI -> truncated_left AND . truncated_left
    (26) truncated_selfprime -> . truncated_left AND P
    (27) extended -> . truncated_sp_PIPI
    (28) extended -> . I AND truncated_selfprime
    (29) extended -> . truncated_left AND truncated_selfprime
    (30) extended -> . truncated_left AND extended
    (22) truncated_left -> . P AND I
    (31) truncated_sp_PIPI -> . truncated_left AND truncated_left
    (32) truncated_sp_PIPI -> . truncated_sp_PIPI AND truncated_left

    P               shift and go to state 27
    I               shift and go to state 30

    truncated_left                 shift and go to state 26
    truncated_selfprime            shift and go to state 28
    extended                       shift and go to state 29
    truncated_sp_PIPI              shift and go to state 19

state 22

    (35) truncated_snapback_selfprime -> truncated_sp_PPI AND . truncated_sp_PPI
    (36) truncated_snapback_selfprime -> truncated_sp_PPI AND . truncated_snapback_selfprime
    (23) truncated_sp_PPI -> . P AND P AND I
    (35) truncated_snapback_selfprime -> . truncated_sp_PPI AND truncated_sp_PPI
    (36) truncated_snapback_selfprime -> . truncated_sp_PPI AND truncated_snapback_selfprime

    P               shift and go to state 33

    truncated_sp_PPI               shift and go to state 31
    truncated_snapback_selfprime   shift and go to state 32

state 23

    (22) truncated_left -> P AND . I
    (20) doubled_payload -> P AND . P
    (23) truncated_sp_PPI -> P AND . P AND I

    I               shift and go to state 35
    P               shift and go to state 34


state 24

    (21) truncated_right -> I AND . P
    (25) expected -> I AND . truncated_left
    (24) truncated_sp_IPP -> I AND . P AND P
    (33) snapback -> I AND . truncated_sp_PPI
    (28) extended -> I AND . truncated_selfprime
    (34) expected_selfprime -> I AND . truncated_sp_PIPI
    (37) snapback_selfprime -> I AND . truncated_snapback_selfprime
    (22) truncated_left -> . P AND I
    (23) truncated_sp_PPI -> . P AND P AND I
    (26) truncated_selfprime -> . truncated_left AND P
    (31) truncated_sp_PIPI -> . truncated_left AND truncated_left
    (32) truncated_sp_PIPI -> . truncated_sp_PIPI AND truncated_left
    (35) truncated_snapback_selfprime -> . truncated_sp_PPI AND truncated_sp_PPI
    (36) truncated_snapback_selfprime -> . truncated_sp_PPI AND truncated_snapback_selfprime

    P               shift and go to state 36

    truncated_left                 shift and go to state 37
    truncated_sp_PPI               shift and go to state 38
    truncated_selfprime            shift and go to state 39
    truncated_sp_PIPI              shift and go to state 40
    truncated_snapback_selfprime   shift and go to state 41

state 25

    (32) truncated_sp_PIPI -> truncated_sp_PIPI AND . truncated_left
    (22) truncated_left -> . P AND I

    P               shift and go to state 43

    truncated_left                 shift and go to state 42

state 26

    (31) truncated_sp_PIPI -> truncated_left AND truncated_left .
    (26) truncated_selfprime -> truncated_left . AND P
    (29) extended -> truncated_left . AND truncated_selfprime
    (30) extended -> truncated_left . AND extended
    (31) truncated_sp_PIPI -> truncated_left . AND truncated_left

    $end            reduce using rule 31 (truncated_sp_PIPI -> truncated_left AND truncated_left .)
    AND             shift and go to state 21

  ! AND             [ reduce using rule 31 (truncated_sp_PIPI -> truncated_left AND truncated_left .) ]


state 27

    (26) truncated_selfprime -> truncated_left AND P .
    (22) truncated_left -> P . AND I

    $end            reduce using rule 26 (truncated_selfprime -> truncated_left AND P .)
    AND             shift and go to state 44


state 28

    (29) extended -> truncated_left AND truncated_selfprime .

    $end            reduce using rule 29 (extended -> truncated_left AND truncated_selfprime .)


state 29

    (30) extended -> truncated_left AND extended .

    $end            reduce using rule 30 (extended -> truncated_left AND extended .)


state 30

    (28) extended -> I . AND truncated_selfprime

    AND             shift and go to state 45


state 31

    (35) truncated_snapback_selfprime -> truncated_sp_PPI AND truncated_sp_PPI .
    (35) truncated_snapback_selfprime -> truncated_sp_PPI . AND truncated_sp_PPI
    (36) truncated_snapback_selfprime -> truncated_sp_PPI . AND truncated_snapback_selfprime

    $end            reduce using rule 35 (truncated_snapback_selfprime -> truncated_sp_PPI AND truncated_sp_PPI .)
    AND             shift and go to state 22


state 32

    (36) truncated_snapback_selfprime -> truncated_sp_PPI AND truncated_snapback_selfprime .

    $end            reduce using rule 36 (truncated_snapback_selfprime -> truncated_sp_PPI AND truncated_snapback_selfprime .)


state 33

    (23) truncated_sp_PPI -> P . AND P AND I

    AND             shift and go to state 46


state 34

    (20) doubled_payload -> P AND P .
    (23) truncated_sp_PPI -> P AND P . AND I

    $end            reduce using rule 20 (doubled_payload -> P AND P .)
    AND             shift and go to state 47


state 35

    (22) truncated_left -> P AND I .

    AND             reduce using rule 22 (truncated_left -> P AND I .)
    $end            reduce using rule 22 (truncated_left -> P AND I .)


state 36

    (21) truncated_right -> I AND P .
    (24) truncated_sp_IPP -> I AND P . AND P
    (22) truncated_left -> P . AND I
    (23) truncated_sp_PPI -> P . AND P AND I

    $end            reduce using rule 21 (truncated_right -> I AND P .)
    AND             shift and go to state 48


state 37

    (25) expected -> I AND truncated_left .
    (26) truncated_selfprime -> truncated_left . AND P
    (31) truncated_sp_PIPI -> truncated_left . AND truncated_left

    $end            reduce using rule 25 (expected -> I AND truncated_left .)
    AND             shift and go to state 49


state 38

    (33) snapback -> I AND truncated_sp_PPI .
    (35) truncated_snapback_selfprime -> truncated_sp_PPI . AND truncated_sp_PPI
    (36) truncated_snapback_selfprime -> truncated_sp_PPI . AND truncated_snapback_selfprime

    $end            reduce using rule 33 (snapback -> I AND truncated_sp_PPI .)
    AND             shift and go to state 22


state 39

    (28) extended -> I AND truncated_selfprime .

    $end            reduce using rule 28 (extended -> I AND truncated_selfprime .)


state 40

    (34) expected_selfprime -> I AND truncated_sp_PIPI .
    (32) truncated_sp_PIPI -> truncated_sp_PIPI . AND truncated_left

    $end            reduce using rule 34 (expected_selfprime -> I AND truncated_sp_PIPI .)
    AND             shift and go to state 25


state 41

    (37) snapback_selfprime -> I AND truncated_snapback_selfprime .

    $end            reduce using rule 37 (snapback_selfprime -> I AND truncated_snapback_selfprime .)


state 42

    (32) truncated_sp_PIPI -> truncated_sp_PIPI AND truncated_left .

    AND             reduce using rule 32 (truncated_sp_PIPI -> truncated_sp_PIPI AND truncated_left .)
    $end            reduce using rule 32 (truncated_sp_PIPI -> truncated_sp_PIPI AND truncated_left .)


state 43

    (22) truncated_left -> P . AND I

    AND             shift and go to state 44


state 44

    (22) truncated_left -> P AND . I

    I               shift and go to state 35


state 45

    (28) extended -> I AND . truncated_selfprime
    (26) truncated_selfprime -> . truncated_left AND P
    (22) truncated_left -> . P AND I

    P               shift and go to state 43

    truncated_selfprime            shift and go to state 39
    truncated_left                 shift and go to state 50

state 46

    (23) truncated_sp_PPI -> P AND . P AND I

    P               shift and go to state 51


state 47

    (23) truncated_sp_PPI -> P AND P AND . I

    I               shift and go to state 52


state 48

    (24) truncated_sp_IPP -> I AND P AND . P
    (22) truncated_left -> P AND . I
    (23) truncated_sp_PPI -> P AND . P AND I

    P               shift and go to state 53
    I               shift and go to state 35


state 49

    (26) truncated_selfprime -> truncated_left AND . P
    (31) truncated_sp_PIPI -> truncated_left AND . truncated_left
    (22) truncated_left -> . P AND I

    P               shift and go to state 27

    truncated_left                 shift and go to state 54

state 50

    (26) truncated_selfprime -> truncated_left . AND P

    AND             shift and go to state 55


state 51

    (23) truncated_sp_PPI -> P AND P . AND I

    AND             shift and go to state 47


state 52

    (23) truncated_sp_PPI -> P AND P AND I .

    AND             reduce using rule 23 (truncated_sp_PPI -> P AND P AND I .)
    $end            reduce using rule 23 (truncated_sp_PPI -> P AND P AND I .)


state 53

    (24) truncated_sp_IPP -> I AND P AND P .
    (23) truncated_sp_PPI -> P AND P . AND I

    $end            reduce using rule 24 (truncated_sp_IPP -> I AND P AND P .)
    AND             shift and go to state 47


state 54

    (31) truncated_sp_PIPI -> truncated_left AND truncated_left .

    AND             reduce using rule 31 (truncated_sp_PIPI -> truncated_left AND truncated_left .)
    $end            reduce using rule 31 (truncated_sp_PIPI -> truncated_left AND truncated_left .)


state 55

    (26) truncated_selfprime -> truncated_left AND . P

    P               shift and go to state 56


state 56

    (26) truncated_selfprime -> truncated_left AND P .

    $end            reduce using rule 26 (truncated_selfprime -> truncated_left AND P .)

